// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionItem renders correctly with accordion false 1`] = `
<div
  className="boldr-accordion__item"
>
  <div
    ariaControls="boldr-accordion__body-2"
    id="boldr-accordion__title-2"
    isExpanded={false}
    onClick={[Function]}
    role="button"
  >
    <div>
      Fake title
    </div>
  </div>
  <div
    id="boldr-accordion__body-2"
    isExpanded={false}
    role=""
  >
    <div>
      Fake body
    </div>
  </div>
</div>
`;

exports[`AccordionItem renders correctly with accordion true 1`] = `
<div
  className="boldr-accordion__item"
>
  <div
    ariaControls="boldr-accordion__body-1"
    id="boldr-accordion__title-1"
    isExpanded={false}
    onClick={[Function]}
    role="tab"
  >
    <div>
      Fake title
    </div>
  </div>
  <div
    id="boldr-accordion__body-1"
    isExpanded={false}
    role="tabpanel"
  >
    <div>
      Fake body
    </div>
  </div>
</div>
`;

exports[`AccordionItem renders with different className 1`] = `
<div
  className="boldr-accordion__item"
>
  <div
    ariaControls="boldr-accordion__body-4"
    id="boldr-accordion__title-4"
    isExpanded={false}
    onClick={[Function]}
    role="tab"
  >
    <div>
      Fake title
    </div>
  </div>
  <div
    id="boldr-accordion__body-4"
    isExpanded={false}
    role="tabpanel"
  >
    <div>
      Fake body
    </div>
  </div>
</div>
`;

exports[`AccordionItem still renders with incorrect type children 1`] = `
<div
  className="boldr-accordion__item"
>
  <div>
    Fake title
  </div>
  <div>
    Fake body
  </div>
</div>
`;
